@startuml SchedulerHierarchy

title Scheduler Hierarchy -- ChronoPlan

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam classHeaderBackgroundColor #D0D8E4
skinparam classBorderColor #000000
skinparam classBackgroundColor #FFFFFF
skinparam arrowColor #000000
skinparam arrowThickness 1.5
skinparam class {
  BackgroundColor<<stub>> #EFEFEF
  BorderColor<<stub>> #AAAAAA
  HeaderBackgroundColor<<stub>> #CCCCCC
}

class Scheduler {
  - profile : Profile
  --
  <<constructor>> Scheduler(profile : Profile)
  + detectConflicts(event : Event) : ArrayList<Event>
  + scheduleTasks(from : LocalDate,\n  sortPolicy : SchedulingPolicy,\n  placementPolicy : PlacementPolicy) : SchedulingResult
  - findCandidateSlots(task : Task, from : LocalDate,\n  newlyScheduled : ArrayList<Task>) : ArrayList<LocalDateTime[]>
  - getOccupiedIntervals(date : LocalDate,\n  newlyScheduled : ArrayList<Task>) : ArrayList<LocalTime[]>
  - subtractOccupied(workStart, workEnd : LocalTime,\n  occupied : ArrayList<LocalTime[]>) : ArrayList<LocalTime[]>
}

class SchedulingResult {
  - scheduled : ArrayList<Task>
  - unplaceable : ArrayList<Task>
  --
  <<constructor>> SchedulingResult(scheduled : ArrayList<Task>,\n  unplaceable : ArrayList<Task>)
  + getScheduled() : ArrayList<Task>
  + getUnplaceable() : ArrayList<Task>
  + isComplete() : boolean
  + totalProcessed() : int
}

package "Ordering Policies" {

  abstract class SchedulingPolicy {
    --
    + {abstract} sortTasks(tasks : ArrayList<Task>) : ArrayList<Task>
  }

  class EarliestDeadlinePolicy {
    --
    + sortTasks(tasks : ArrayList<Task>) : ArrayList<Task>
  }

  class PriorityFirstPolicy {
    --
    + sortTasks(tasks : ArrayList<Task>) : ArrayList<Task>
  }

  SchedulingPolicy <|-- EarliestDeadlinePolicy
  SchedulingPolicy <|-- PriorityFirstPolicy

}

package "Placement Policies" {

  abstract class PlacementPolicy {
    --
    + {abstract} selectSlot(task : Task,\n  candidates : ArrayList<LocalDateTime[]>) : LocalDateTime[]
  }

  class DeepWorkPlacement {
    --
    + selectSlot(task : Task,\n  candidates : ArrayList<LocalDateTime[]>) : LocalDateTime[]
  }

  class SpreadOutPlacement {
    --
    + selectSlot(task : Task,\n  candidates : ArrayList<LocalDateTime[]>) : LocalDateTime[]
  }

  PlacementPolicy <|-- DeepWorkPlacement
  PlacementPolicy <|-- SpreadOutPlacement

}

Scheduler  -->  SchedulingPolicy  : uses >
Scheduler  -->  PlacementPolicy   : uses >
Scheduler "1" --> "1" SchedulingResult : creates >

@enduml
